# snake_rs_bevy

./: ATTRIBUTION.md  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: game.rs  main.rs
src/game/: mod.rs  prelude.rs
src/game/components/: mod.rs
src/game/ressources/: mod.rs
src/game/systems/: gameplay.rs  input.rs  mod.rs  prelude.rs  setup.rs  ui.rs
src/plugins/: debug_diagnostics_plugin.rs  mod.rs
