[package]
name = "snake_rs_bevy"
version = "0.1.0"
authors = ["Tristan Druyen <tristandruyen@vault81.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1"
rand = "0.7.3"
chrono = "0.4.15"
fern = "0.6.0"
log = "0.4.11"
structopt = "0.3.16"
