[package]
name = "snake_rs_bevy"
version = "0.1.0"
authors = ["Tristan Druyen <tristandruyen@vault81.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3.0"
rand = "0.7.3"
chrono = "0.4.15"
fern = "0.6.0"
log = "0.4.11"
structopt = "0.3.16"

[package.metadata.android]
# Name of your APK as shown in the app drawer and in the app switcher
apk_label = "Knake"
# The target Android API level.
min_sdk_version = 16
target_sdk_version = 29
assets = "assets"
res = "assets/android-res"
icon = "@mipmap/ic_launcher"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
